--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,4 +1,7 @@
 {
+  "vueCompilerOptions": {
+    "experimentalDisableTemplateSupport": true
+  },
   "compilerOptions": {
     "target": "es5",
     "module": "esnext",
